Styling, bug fix, readability
- Fancied up the form on Ask us!
- File path from Gallery was wrong!
- Divided the About text to smaller chunks, and adjusted the main background color a tiny bit brighter for higher contrast.

--- a/css/_about.css
+++ b/css/_about.css
@@ -11,7 +11,7 @@
     text-align: center;
 }
  .about-p {
-    max-width: 1200px;
+    max-width: 1000px;
     margin: 0 auto;
-    margin-top: 20px;
+    margin-top: 30px;
  }
