--- a/css/_ask.css
+++ b/css/_ask.css
@@ -6,13 +6,16 @@
     max-width: 800px;
     gap: 10px;
     margin-top: 60px;
+
 }
+
 #form-submit-btn {
     width: 250px;
     height: 40px;
     margin: 0 auto;
     margin-top: 20px;
 }
+
 label {
     margin-bottom: 0px;
     padding-bottom: 0px;
@@ -25,4 +28,14 @@ input {
 
 #question {
     height: 150px;
+}
+
+#question, input {
+    border-radius: 15px;
+    text-indent: 10px;
+}
+
+#form-submit-btn {
+    border-radius: 200px 0;
+    background-color: #9acd32;
 }
